GUAC-972: Ensure list links stretch the entire width of the list.

--- a/guacamole/src/main/webapp/app/index/styles/lists.css
+++ b/guacamole/src/main/webapp/app/index/styles/lists.css
@@ -75,7 +75,7 @@ div.recent-connections .protocol {
     vertical-align: middle;
 }
 
-.caption > * {
+.caption .choice {
     display: inline-block;
 }
 
